add section 'home'

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,21 @@
      </div>
    </header>
  <section id="home">
-
+   <div class="container text-center">
+     <div class="welcome">
+       <div class="stars"></div>
+       <span>Intensive program barista training</span>
+       <h1>Barista Training in <b>amsterdam</b></h1>
+       <p>On the basis of the company's largest coffee roasters</p>
+       <div class="arrows"></div>
+       <div class="btn-down">
+         <div class="arrow-down"></div>
+       </div>
+     </div>
+   </div>
+   <div class="granola"></div>
+   <div class="home-footer"></div>
  </section>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam ipsum consectetur quod officiis perferendis animi, dolorem at itaque illo aspernatur, blanditiis fugiat unde laboriosam dolore recusandae repellendus iste fugit impedit.</p>
 </body>
 </html>
