section 'programs'(in process)

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
      </div>
    </header>
  <section id="home">
-   <div class="container text-center">
+   <div class="container">
      <div class="welcome">
        <div class="stars"></div>
        <span>Intensive program barista training</span>
@@ -44,6 +44,75 @@
    <div class="granola"></div>
    <div class="home-footer"></div>
  </section>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam ipsum consectetur quod officiis perferendis animi, dolorem at itaque illo aspernatur, blanditiis fugiat unde laboriosam dolore recusandae repellendus iste fugit impedit.</p>
+ <section id="program">
+    <div class="granola"></div>
+    <div class="container">
+      <h1>Programs</h1>
+      <p>We share their experience and professional barista championships multiple winners</p>
+      <div class="programs">
+        <ul class="menu-tabs">
+          <li><a href="" id="item-basic">basic</a></li>
+          <li><a href="" id="item-premium">premium</a></li>
+          <li><a href="" id="item-platinum">platinum</a></li>
+        </ul>
+        <div class="tab" id="basic-tab">
+          <span class="bg-tab">basic</span>
+          <div class="row description">
+            <div class="col-md-7">
+              <img src="img/programs/imgtab.jpg" alt="">
+            </div>
+            <div class="col-md-5">
+              <h3>Beginners Course</h3>
+              <div class="conditionals">
+                <div><img src="img/icons/list.png" alt=""><span>Certificate</span></div>
+                <div><img src="img/icons/clock.png" alt=""><span>240 minets</span></div>
+                <div class="price"><h2>1 500</h2>usd</div>
+              </div>
+              <a class="btn-reg">registration</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 offers">
+              <h4>Provenance coffee and basic concepts:</h4>
+              <p>Legend of the origin of coffee.</p>
+              <ul class="offer-list">
+                <li>Chronicle of the spread of the coffee tree</li>
+                <li>What is coffee?</li>
+                <li>The structure of the coffee berry</li>
+                <li>Arabica and Robusta</li>
+                <li>Coffee Belt land</li>
+                <li>Fruiting coffee tree</li>
+                <li>Seven steps of the coffee plantation to the consumer</li>
+                <li>Breeding and hybridization of coffee tree</li>
+              </ul>
+            </div>
+            <div class="col-md-4 offers">
+              <h4>coffee production technology:</h4>
+              <ul class="offer-list">
+                <li>Methods for collecting coffee berries</li>
+                <li>Processing collected berries</li>
+                <li>Calibration and sorting</li>
+                <li>Some methods of classification and labeling of coffee beans.</li>
+                <li>Formation of grade names.</li>
+                <li>Storage of green (not fried) Coffee</li>
+              </ul>
+            </div>
+            <div class="col-md-4 offers">
+              <h4>roasting Technology bean. and Stage types of roasting.</h4>
+              <ul class="offer-list">
+                <li>The technology of roasting coffee beans.</li>
+                <li>Changes in the beans.</li>
+                <li>Stages and types of roasting.</li>
+                <li>Roasted coffee. Monosorta and hood.</li>
+                <li>Decaffeination of coffee</li>
+                <li>Flavoring</li>
+                <li>Storage roasted coffee</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+ </section>
 </body>
 </html>
