add section 'gallery'

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
      </div>
    </div>
    <div class="granola"></div>
-   <div class="home-footer"></div>
+   <div class="home-bottom"></div>
  </section>
  <section id="programs">
     <div class="granola"></div>
@@ -579,6 +579,43 @@
         </div>
       </div>
     </div>
+ </section>
+ <section id="gallery">
+   <div class="gallery-top"></div>
+   <div class="container">
+     <h1>Gallery</h1>
+     <p>You yourself are testing the taste benefits of each method and select the type of cooking yourself</p>
+   </div>
+   <div class="slider-wrapper">
+     <div class="slider" id="slider-gallery">
+     		<div class="slide-c">
+     		  <div class="slide-content">
+     		    <img src="img/gallery/slider-img1.jpg" alt="">
+     		  </div>
+     		</div>
+        <div class="slide-c">
+          <div class="slide-content">
+            <img src="img/gallery/slider-img2.jpg" alt="">
+          </div>
+        </div>
+        <div class="slide-c">
+          <div class="slide-content">
+            <img src="img/gallery/slider-img4.jpg" alt="">
+          </div>
+        </div>
+     </div>
+
+     <div class="slider-nav">
+          <div class="btn-slide btn-previous">
+            <div class="box"></div>
+          </div>
+          <div class="btn-slide btn-next">
+            <div class="box"></div>
+          </div>
+      </div>
+   </div>
+   <div class="granola"></div>
+   <div class="gallery-bottom"></div>
  </section>
 </body>
 </html>
