--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
+ <header>
      <img src="img/logo.png" id="logo" alt="">
      <div id="menu">
        <a id="icon-menu" ng-click="showMenu()">
@@ -616,6 +616,107 @@
    </div>
    <div class="granola"></div>
    <div class="gallery-bottom"></div>
+ </section>
+ <section id="testimonials">
+   <div class="container">
+     <h1>Testimonials</h1>
+     <p>We have enough patience to teach you the art of coffee</p>
+     <div class="slider-testimonials">
+      	<div class="slider-wrapper-t">
+      		<div class="slide-t">
+      		  <div class="slide-content">
+      		    <div class="person-img">
+                <img src="img/testimonials/manimg.png" alt="">
+      		      <a class="social-icon">
+      		        <img src="img/icons/facebook.png" alt="">
+      		      </a>
+      		    </div>
+              <h4>Alex Nikandrov</h4>
+              <p>Our company is grateful for the delicious and freshly roasted coffee in our office
+                 every day! Our staff of more than 300 people, appreciate quality and flavor of the
+                 coffee, because that would be important for our office staff were every morning
+                 refreshed and in a good mood! Recommended!</p>
+      		  </div>
+      		</div>
+          <div class="slide-t">
+      		  <div class="slide-content">
+      		    <div class="person-img">
+                <img src="img/testimonials/manimg2.jpg" alt="">
+      		      <a class="social-icon">
+      		        <img src="img/icons/facebook.png" alt="">
+      		      </a>
+      		    </div>
+              <h4>John Doe</h4>
+              <p>Our company is grateful for the delicious and freshly roasted coffee in our office
+                 every day! Our staff of more than 300 people, appreciate quality and flavor of the
+                 coffee, because that would be important for our office staff were every morning
+                 refreshed and in a good mood! Recommended!</p>
+      		  </div>
+      		</div>
+          <div class="slide-t">
+      		  <div class="slide-content">
+      		    <div class="person-img">
+                <img src="img/testimonials/manimg3.jpg" alt="">
+      		      <a class="social-icon">
+      		        <img src="img/icons/facebook.png" alt="">
+      		      </a>
+      		    </div>
+              <h4>Lewis Stanford</h4>
+              <p>Our company is grateful for the delicious and freshly roasted coffee in our office
+                 every day! Our staff of more than 300 people, appreciate quality and flavor of the
+                 coffee, because that would be important for our office staff were every morning
+                 refreshed and in a good mood! Recommended!</p>
+      		  </div>
+      		</div>
+          <div class="slide-t">
+      		  <div class="slide-content">
+      		    <div class="person-img">
+                <img src="img/testimonials/manimg4.jpg" alt="">
+      		      <a class="social-icon">
+      		        <img src="img/icons/facebook.png" alt="">
+      		      </a>
+      		    </div>
+              <h4>Michael Douglas</h4>
+              <p>Our company is grateful for the delicious and freshly roasted coffee in our office
+                 every day! Our staff of more than 300 people, appreciate quality and flavor of the
+                 coffee, because that would be important for our office staff were every morning
+                 refreshed and in a good mood! Recommended!</p>
+      		  </div>
+      		</div>
+          <div class="slide-t">
+      		  <div class="slide-content">
+      		    <div class="person-img">
+                <img src="img/testimonials/manimg5.jpg" alt="">
+      		      <a class="social-icon">
+      		        <img src="img/icons/facebook.png" alt="">
+      		      </a>
+      		    </div>
+              <h4>Jeremy Riner</h4>
+              <p>Our company is grateful for the delicious and freshly roasted coffee in our office
+                 every day! Our staff of more than 300 people, appreciate quality and flavor of the
+                 coffee, because that would be important for our office staff were every morning
+                 refreshed and in a good mood! Recommended!</p>
+      		  </div>
+      		</div>
+          <div class="slide-t">
+      		  <div class="slide-content">
+      		    <div class="person-img">
+                <img src="img/testimonials/manimg6.jpg" alt="">
+      		      <a class="social-icon">
+      		        <img src="img/icons/facebook.png" alt="">
+      		      </a>
+      		    </div>
+              <h4>Peter Bendtner</h4>
+              <p>Our company is grateful for the delicious and freshly roasted coffee in our office
+                 every day! Our staff of more than 300 people, appreciate quality and flavor of the
+                 coffee, because that would be important for our office staff were every morning
+                 refreshed and in a good mood! Recommended!</p>
+      		  </div>
+      		</div>
+        </div>
+        <div id="slider-nav-t"></div>
+    </div>
+   </div>
  </section>
 </body>
 </html>
