add section 'our partners'

--- a/src/index.html
+++ b/src/index.html
@@ -718,5 +718,50 @@
     </div>
    </div>
  </section>
+ <section id="partners">
+   <div class="container">
+     <h1>Our partners</h1>
+     <div class="divider"></div>
+     <div class="slider-partners">
+       <div class="slider-wrapper">
+         <div class="slider" id="slider-clients">
+         		<div class="slide-c">
+         		  <div class="slide-content">
+         		    <img src="img/partners/abajour_logo.png" alt="">
+         		  </div>
+         		</div>
+            <div class="slide-c">
+              <div class="slide-content">
+                <img src="img/partners/altbee_logo.png" alt="">
+              </div>
+            </div>
+            <div class="slide-c">
+              <div class="slide-content">
+                <img src="img/partners/dedushka_logo.png" alt="">
+              </div>
+            </div>
+            <div class="slide-c">
+              <div class="slide-content">
+                <img src="img/partners/gdeburger_logo.png" alt="">
+              </div>
+            </div>
+            <div class="slide-c">
+              <div class="slide-content">
+                <img src="img/partners/baden_baden_logo.png" alt="">
+              </div>
+            </div>
+            <div class="slide-c">
+              <div class="slide-content">
+                <img src="img/partners/klass_logo.png" alt="">
+              </div>
+            </div>
+         </div>
+     </div>
+     <div class="slider-nav">
+        <div class="btn-slide btn-p-previous"></div>
+        <div class="btn-slide btn-p-next"></div>
+      </div>
+   </div>
+ </section>
 </body>
 </html>
