add section 'contact us'

--- a/src/index.html
+++ b/src/index.html
@@ -724,7 +724,7 @@
      <div class="divider"></div>
      <div class="slider-partners">
        <div class="slider-wrapper">
-         <div class="slider" id="slider-clients">
+         <div class="slider" id="slider-partners">
          		<div class="slide-c">
          		  <div class="slide-content">
          		    <img src="img/partners/abajour_logo.png" alt="">
@@ -762,6 +762,26 @@
         <div class="btn-slide btn-p-next"></div>
       </div>
    </div>
+ </section>
+ <section id="contact-us">
+   <div class="granols"></div>
+   <div class="granola"></div>
+   <div class="container">
+     <div class="row">
+       <div class="contact-form col-md-12 col-lg-8 col-lg-offset-4 col-xs-12">
+        <h1>Have questions?</h1>
+        <div class="divider"></div>
+        <p>Leave a request and we will contact you shortly</p>
+        <form>
+          <input type="text" class="contact-name" placeholder="YOUR NAME">
+          <input type="text" class="contact-number" placeholder="CONTACT NUMBER">
+          <button type="submit">send</button>
+        </form>
+       </div>
+      </div>
+   </div>
+   <div class="granola-bottom"></div>
+   <div class="contact-us-bottom"></div>
  </section>
 </body>
 </html>
