--- a/src/index.html
+++ b/src/index.html
@@ -783,5 +783,77 @@
    <div class="granola-bottom"></div>
    <div class="contact-us-bottom"></div>
  </section>
+ <footer>
+   <div class="container">
+     <h1>Proffessional school barista</h1>
+     <div class="row">
+       <div class="col-md-6 col-xs-12">
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+             ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+             eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+             deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+             accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+             quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+             aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+             porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+             numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+         </div>
+       <div class="col-md-6 col-xs-12">
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+             ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+             eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+             deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+             accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+             quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+             aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+             porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+             numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+       </div>
+     </div>
+     <div class="footer-table">
+       <div class="row footer-menu">
+           <ul id="footer-menu">
+             <li><a class="footer-menu-link">Program</a></li>
+             <li><a class="footer-menu-link">Gallery</a></li>
+             <li><a class="footer-menu-link">Testimonials</a></li>
+             <li><a class="footer-menu-link">Contact</a></li>
+           </ul>
+       </div>
+       <div class="row">
+         <div class="col-md-4">
+           <img src="img/icons/phone.png" alt="">
+         </div>
+         <div class="col-md-4">
+           <img src="img/icons/location.png" alt="">
+         </div>
+         <div class="col-md-4">
+           <img src="img/icons/envelope.png" alt="">
+         </div>
+       </div>
+       <div class="row info-footer">
+         <div class="col-md-4 col-xs-12">
+           <span>+38 000 000 000</span>
+         </div>
+         <div class="col-md-4 col-xs-12">
+           <span>Ukraine, 61002</span>
+         </div>
+         <div class="col-md-4 col-xs-12">
+           <span>Hello@.com</span>
+         </div>
+       </div>
+    </div>
+    <ul class="contacts">
+      <li><img src="img/icons/phone.png" alt=""><span> +38 000 000 000</span></li>
+      <li><img src="img/icons/location.png" alt=""><span> Ukraine, 61002</span></li>
+      <li><img src="img/icons/envelope.png" alt=""><span> Hello@.com</span></li>
+    </ul>
+    <p class="copyright">
+      <span class="copy">© Copyright 2017 . All Rights Reserved.</span>
+      <span class="by">site template by <a href="">NIKANDROV.PRO</a></span>
+    </p>
+   </div>
+ </footer>
 </body>
 </html>
